# University

./: .gitignore
laboratory work 1/: main.cpp
semester 1/Programming/Laboratory work 2/: main.cpp
semester 2/ComputerSystemsAndNetworks/Laboratory work IEEE-754/: main.py
semester 2/ComputerSystemsAndNetworks/Laboratory work Sockets/: client.py  client_log.txt  server.py  server_log.txt
semester 2/Programming/Laboratory work 3-4/: main.cpp
semester 2/Programming/Laboratory work 5/: CMakeLists.txt  walk.cpp
semester 2/Programming/Laboratory work 6/: CMakeLists.txt  input.txt  main.cpp  output.txt
semester 2/laboratory work 3-4/: CMakeLists.txt  line.cpp  line.h  main.cpp  point.cpp  point.h  quadrilateral.cpp  quadrilateral.h  utilities.cpp  utilities.h
semester 2/laboratory work 5/: main.cpp  matrix.cpp  matrix.h  walk.h
semester 3/C++/lab1/: input.txt  output.txt  program.cpp
semester 3/C++/lab2/: program.cpp
semester 3/C++/lab3/: program.cpp  results.txt
semester 3/C++/lab4/: main.cpp  (+12 more)
semester 4/IStaTP/Laboratory work 1/: .gitignore  app.py  config.py  pyproject.toml
semester 4/IStaTP/Laboratory work 1/database/: base.py  books.py
semester 4/IStaTP/Laboratory work 1/templates/: authors.html  book_detail.html  genres.html  index.html  login.html  profile.html  register.html  search.html
semester 4/IStaTP/Laboratory work 1/templates/admin/: author_form.html  authors.html  book_form.html  books.html  genre_form.html  genres.html
semester 5/AFL/Laboratory work 6/: CMakeLists.txt  Makefile  README.md  lab6  main.cpp  test_file.cpp
semester 5/DBs/Laboratory work 1/: README.md  app.py  er_code.txt  pyproject.toml
semester 5/DBs/Laboratory work 1/src/: db.py  uow.py
semester 5/DBs/Laboratory work 1/src/database/: __init__.py  attachments.py  audit.py  base.py  chats.py  projects.py  users.py
semester 5/DBs/Laboratory work 1/src/repositories/: audit.py  base.py  contracts.py
semester 5/DBs/Laboratory work 1/static/: styles.css
semester 5/DBs/Laboratory work 1/templates/: audit.html  base.html  index.html  users_summary.html
(+113 files in other folders)
