[project]
name = "laboratory-work-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "flask-login>=0.6.3",
    "flask[async]>=3.1.0",
    "greenlet>=3.1.1",
    "jinja2>=3.1.5",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
]
